plugins {
    id 'application'
}
application {
    mainClass = 'me.chester.minitruco.server.MiniTrucoServer'
}

dependencies {
    implementation project(':core')
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0-M1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0-M1'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}
java {
    sourceCompatibility = JavaVersion.VERSION_19
    targetCompatibility = JavaVersion.VERSION_19
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    jvmArgs += '--enable-preview'
}

tasks.jar {
    manifest.attributes["Main-Class"] = "me.chester.minitruco.server.MiniTrucoServer"
    from(project(':core').fileTree("build/classes/java/main")) {
        include '**/*.class'
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}
